# coingecko-cli

./: LICENSE  README.rst  pyproject.toml
coingecko_cli/: asset_platforms.py  categories.py  cli.py  coins.py  companies.py  contract.py  derivatives.py  exchange_rates.py  exchanges.py  global_data.py  indexes.py  search.py  simple.py  utils.py
tests/: test_coingecko_cli.py
