[tool.poetry]
name = "coingecko-cli"
version = "0.1.0"
description = ""
authors = ["0x4nz0 <4nz0@proton.me>"]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.23.0"
typer = {extras = ["all"], version = "^0.6.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
coingecko-cli = 'coingecko_cli.cli:app'
